--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto:wght@400;700&display=swap');
 
+:root {
+  --primary-color: #000;
+  --secondary-color: #9ca3af;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Merriweather', serif;
+  /* font-family: 'Roboto', sans-serif; */
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Merriweather', serif;
 }
