fix: sidebar fix for user

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -29,3 +29,9 @@
 .list-item {
   margin-right: 1.5rem;
 }
+
+.logo-link {
+  text-decoration: none;
+  color: var(--primary-color);
+  cursor: pointer;
+}
