--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -4,7 +4,8 @@
 
 .Collapsible-body {
   overflow-x: hidden;
-  background-color: var(--sidebar-color);
+  background-color: white;
+  box-shadow: var(--shadow);
 }
 
 .MenuItem {
