--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,7 +1,11 @@
 .center-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2rem;
-    z-index: 10000;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  z-index: 10000;
+}
+
+.Icon {
+  cursor: pointer;
+}
