--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -17,7 +17,9 @@
 
 .logo span {
   color: var(--primary-text-color);
+  font-family: 'Merriweather', serif;
   font-weight: 900;
+  font-size: 1.2rem;
 }
 
 /* list */
