--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,15 @@
   margin: 0;
   padding: 0;
   font-family: 'Merriweather', serif;
-  /* font-family: 'Roboto', sans-serif; */
+}
+
+#root {
+  width: 100%;
+}
+
+body {
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 h1,
