feat: add past-history-illness page

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,11 @@
 body {
   justify-content: flex-start;
   align-items: flex-start;
+  background-color: #fff;
+}
+
+iframe {
+  display: none !important;
 }
 
 h1,
