fix: iframe bug fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,17 +20,13 @@
   width: 100%;
 }
 
+iframe {
+  display: none !important;
+}
+
 body {
   justify-content: flex-start;
   align-items: flex-start;
-<<<<<<< HEAD
-  background-color: #fff;
-}
-
-iframe {
-  display: none !important;
-=======
->>>>>>> cd403caa77255fd6ddf4a8f1dde639c6ce2ca9e0
 }
 
 h1,
@@ -55,6 +51,7 @@ h6 {
 /* right content */
 .content-wrapper {
   flex-grow: 1;
+  margin-left: 1rem;
 }
 
 .link {
