fix(style): sidebar background fix

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -5,7 +5,7 @@
 .Collapsible-body {
   overflow-x: hidden;
   background-color: white;
-  box-shadow: var(--shadow);
+  border-radius: 0.8rem;
   flex-grow: 0;
 }
 
