--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -8,7 +8,7 @@
   color: var(--primary-color);
   padding: 1rem;
   background-color: var(--navbar-color);
-  border-bottom: 1px solid #00000080;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .logo {
