--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@
   --sidebar-color: #f9fafb;
   --white-color: #fff;
   --shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.16);
+  --border-color: rgba(225, 228, 232, 1);
 }
 
 * {
@@ -66,4 +67,12 @@ body {
 
 .bg-secondary-lightest {
   box-shadow: var(--shadow);
+}
+
+.Collapsible {
+  background: none;
+}
+
+.cta {
+  color: var(--primary-jal);
 }
