--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -9,6 +9,7 @@
   padding: 1rem;
   background-color: var(--navbar-color);
   border-bottom: 1px solid var(--border-color);
+  width: 100%;
 }
 
 .logo {
