--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,6 @@
 .stick-left {
   position: sticky;
+  margin: 1rem 0;
 }
 
 .Collapsible-body {
@@ -13,5 +14,4 @@
   margin-bottom: 1rem;
 }
 @media only screen and (max-width: 600px) {
-
 }
