fix(style): table style fix for patient info

--- a/src/styles.css
+++ b/src/styles.css
@@ -112,3 +112,8 @@ iframe {
 .bg-secondary-lightest {
   background: none !important;
 }
+
+.rt-td {
+  display: flex !important;
+  justify-content: center !important;
+}
