--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -9,3 +9,13 @@
 .Icon {
   cursor: pointer;
 }
+
+.err-msg {
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  color: #dc2626;
+  background-color: #fee2e2;
+  margin-top: 1rem;
+  border: 1px solid #dc2626;
+  border-radius: 4px;
+}
