feat: add loader for register page

--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -5,3 +5,13 @@
   margin-top: 2rem;
   z-index: 10000;
 }
+
+.center-loader {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 4rem;
+}
+
+.Modal-body--withMargin {
+  margin-bottom: 40px !important;
+}
